--- a/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
@@ -2,18 +2,18 @@
 
 ###Policy
  policy_pd_terraforming: "Terraformowanie"
- policy_pd_terraforming_desc: "Możemy decydować, w jaki sposób nasi naukowcy podejdą do terraformowania naszych planet."
+ policy_pd_terraforming_desc: "Możemy zdecydować, w jaki sposób nasi naukowcy podejdą do terraformowania naszych planet."
  pd_choose_every_planet_terraforming_name: "Wybierz każdy biom"
  pd_choose_every_planet: "Wybierz każdy biom"
- pd_choose_every_planet_desc: "Na koniec każdego projektu terraformowania będziemy mogli dokonać wyboru odnośnie wyboru biomu."
+ pd_choose_every_planet_desc: "Będziemy mogli dokonać wyboru biomu na końcu każdego projektu terraformowania."
  pd_same_as_homeworld_terraforming_name: "Świat ojczysty jednorodny"
  pd_same_as_homeworld: "Świat ojczysty jednorodny"
- pd_same_as_homeworld_desc: "Wszystkie odpowiednie planety zostaną terraformowane do tej samej klasy, reszta zostanie terraformowana do klas losowych."
+ pd_same_as_homeworld_desc: "Wszystkie odpowiednie planety zostaną terraformowane do tej samej klasy, reszta otrzyma losowe klasy."
  pd_random_same_class_terraforming_name: "Losowy podobny biom"
  pd_random_same_class: "Losowy podobny biom"
- pd_random_same_class_desc: "Losowo wybierzemy dowolny biom z tej samej grupy planet."
+ pd_random_same_class_desc: "Losowo wybierzemy biom z tej samej grupy planet."
 
- climate_superhabitables: "Super Ziemski"
+ climate_superhabitables: "Superziemski"
  climate_cavern: "Jaskiniowy"
  climate_tidallyocked: "Synchroniczny"
 
@@ -176,46 +176,48 @@
  building_gaia_resort_desc: "The controlled weather and breathtaking vistas allow for the pinnacle of resorts for both entertainment and medical needs."
 
  #Nuke Own Planet Decision
- decision_nuked_own_planet: "Nuke Environment"
- decision_nuked_own_planet_desc: "We require a radioactive environment to thrive. We can transform this world to our current needs using conventional nuclear warheads."
-
+ decision_nuked_own_planet: "Zniszczyć środowisko"
+ decision_nuked_own_planet_desc: "Potrzebujemy radioaktywnego środowiska, aby się rozwijać. Możemy przekształcić tę planetę w zgodzie z naszymi potrzebami, używając konwencjonalnych głowic nuklearnych."
+ 
  #Economic Categories
- mod_planet_bio_trophies_unity_produces_add: "£unity£ $unity$ per $pop_group_unit$ [GetPopAssemblersPluralWithIcon]"
+ mod_planet_bio_trophies_unity_produces_add: "£unity£ $unity$ na $pop_group_unit$ [GetPopAssemblersPluralWithIcon]"
 
  #Flooding Ascension
- decision_pd_flood_planet: "Expand Planetary Sea"
- decision_pd_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$pd_aw_flooded_planet_tooltip$"
- pd_aw_flooded_planet: "Flooded World"
- decision_pd_unflood_planet: "Unflood World"
- decision_pd_unflood_planet_desc: "This will remove the flooded ecosystem from this world, bringing it back to it orginal state."
+ decision_pd_flood_planet: "Poszerz morza planety"
+ decision_pd_flood_planet_desc: "Ta oceaniczna planeta ma potencjał, by stać się idealnym domem dla naszego ludu. Poprzez podniesienie poziomu mórz i przeniesienie miast pod wodę zapewnimy rozwój życia przystosowanego do głębin."
+ decision_pd_flood_planet_tooltip: "Lód zostanie pozyskany z systemu posiadającego §Y$sm_ice_mining_station$§!\nDo §Y$pd_aw_flooded_planet$§! dodany zostanie modyfikator:\n$pd_aw_flooded_planet_tooltip$"
+ pd_aw_flooded_planet: "Świat wodny"
+ decision_pd_unflood_planet: "Osusz planetę"
+ decision_pd_unflood_planet_desc: "To usunie zalany ekosystem z tej planety, przywracając ją do pierwotnego stanu."
 
- ICE_MINING_PD_PLANET_SUCCESS_TITLE: "Planet Flooded"
- ICE_MINING_PD_PLANET_SUCCESS_DESC: "Using ice mined from the $SYSTEM|Y$ system, we have managed to flood §Y[This.GetName]§!."
+
+ ICE_MINING_PD_PLANET_SUCCESS_TITLE: "Planeta zalana"
+ ICE_MINING_PD_PLANET_SUCCESS_DESC: "Dzięki wykorzystaniu lodu wydobytego w systemie $SYSTEM|Y$, udało nam się zalać §Y[This.GetName]§!."
 
  decision_pd_build_dayside_farm: "$decision_build_dayside_farm$"
  decision_pd_build_dayside_farm_desc: "$decision_build_dayside_farm_desc$"
  decision_pd_build_dayside_farm_effects_short: "$decision_build_dayside_farm_effects_short$"
 
  #Gaia Terraforming
- policy_pd_gaia_modifier: "World Shaping"
- policy_pd_gaia_modifier_desc: "While costly, we can apply our advanced terraforming techniques to every planetary project, ensuring that every terraformed planet is shaped to perfection."
- pd_expensive_gaia_terraforming_name: "World Shaper Terraforming"
- pd_expensive_gaia_terraforming: "World Shaper Terraforming"
- pd_expensive_gaia_terraforming_desc: "All terraforming projects will gain the §Y$engineered_environment_gaia$ Modifier§!. This will make all terraforming projects more expensive."
- pd_normal_terraforming_name: "Normal Terraforming Standard"
- pd_normal_terraforming: "Normal Terraforming Standard"
- pd_normal_terraforming_desc: "Terraforming costs will remain standard, we will use World Shaper on the planets we choose."
-
+ policy_pd_gaia_modifier: "Kształtowanie świata"
+ policy_pd_gaia_modifier_desc: "Choć kosztowne, możemy zastosować nasze zaawansowane techniki terraformowania na każdym projekcie planetarnym, zapewniając, że każda terraformowana planeta będzie idealnie ukształtowana."
+ pd_expensive_gaia_terraforming_name: "Terraformowanie kształtujące"
+ pd_expensive_gaia_terraforming: "Terraformowanie kształtujące"
+ pd_expensive_gaia_terraforming_desc: "Wszystkie projekty terraformowania otrzymają modyfikator §Y$engineered_environment_gaia$§!. Spowoduje to wzrost kosztów wszystkich projektów terraformowania."
+ pd_normal_terraforming_name: "Terraformowanie standardowe"
+ pd_normal_terraforming: "Terraformowanie standardowe"
+ pd_normal_terraforming_desc: "Koszty terraformowania pozostaną standardowe, użyjemy kształtowania świata tylko tam, gdzie uznamy to za konieczne."
+ 
  #Nemma World
- pd_nemma: "Nemma World"
- pd_nemma_desc: "This planet's islands are actually colossal, mineral-shelled amphibian reptiles. Called Nemmas, they float on the surface and remain docile if undisturbed."
+ pd_nemma: "Świat Nemma"
+ pd_nemma_desc: "Wyspy tej planety to w rzeczywistości olbrzymie, mineralnie opancerzone płazy-reptyle. Nazywane Nemmami, unoszą się na powierzchni i pozostają spokojne, jeśli nie są niepokojone."
+ 
  #Alpha Centauri
- pd_alpha_centauri: "Chiron World"
- pd_alpha_centauri_desc: "The planet is covered in xeno-fungal growths and plagued by extreme weather and seismic instability. Despite these hazards, its rich resources and resilient biosphere offer valuable opportunities for research and exploitation."
-
+ pd_alpha_centauri: "Świat Chiron"
+ pd_alpha_centauri_desc: "Planeta pokryta jest ksenogrzybnią i cierpi na ekstremalne warunki pogodowe oraz niestabilność sejsmiczną. Pomimo tych zagrożeń, jej bogate zasoby i odporna biosfera oferują cenne możliwości badań i eksploatacji."
+ 
  #Zones
- zone_pd_hive_spawning: "Spawning Zone"
- zone_pd_hive_spawning_desc: "A zone dedicated to the spawning of new drones."
- zone_pd_machine_replication: "Assembly Zone"
- zone_pd_machine_replication_desc: "A zone dedicated to the construction of new machine units."
+ zone_pd_hive_spawning: "Strefa wylęgu"
+ zone_pd_hive_spawning_desc: "Strefa przeznaczona do wylęgu nowych dronów."
+ zone_pd_machine_replication: "Strefa montażu"
+ zone_pd_machine_replication_desc: "Strefa przeznaczona do konstrukcji nowych jednostek maszyn."
