--- a/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
@@ -24,7 +24,7 @@
  climate_arid: "Suchy"
  climate_savannah: "Sawannowy"
  climate_arctic: "Arktyczny"
- climate_alpine: "Górski"
+ climate_alpine: "Wysokogórski"
  climate_tundra: "Tundrowy"
 
 ###Rare Buildings
