--- a/planetary_diversity/localisation/polish/planetarydiversity_vanilla_overwrites_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_vanilla_overwrites_l_polish.yml
@@ -3,7 +3,7 @@
 ###Vanilla savannah renamed
  pc_savannah:0 "Świat sawannowy"
  pc_savannah_tile:0 "Sawanna"
- trait_pc_savannah_preference:0 "Preferowany teren: sawannowy"
+ trait_pc_savannah_preference:0 "Preferowany klimat: sawannowy"
 
 #Overwritten Vanilla Loc
  mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ z miejsc pracy [GetAdministratorPluralWithIcon]"
