--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -18,7 +18,7 @@
  concept_pd_aw_tree_of_life_holding: "$holding_tree_of_life_sapling$"
  concept_pd_aw_tree_of_life_holding_desc: "- $MOD_MONTHLY_LOYALTY_GAIN$: §G+1§!\n- $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+10%§!\n- £food£ Żywność z miejsc pracy £job_farmer£ ['concept_farmer']: §G+1§!\n- £mod_job_ranger_add£ ['concept_overlord_arborist', $job_overlord_arborist$] miejsca pracy: §G+1§!\n\n§L$holding_tree_of_life_sapling_desc$§!"
 
-#Deposit
+#Deposits
  d_pd_aw_tree_of_life_home: "Drzewo Życia"
  d_pd_aw_tree_of_life_home_desc: "Drzewo Życia dawało schronienie i wsparcie umysłowi zbiorowemu przez niezliczone pokolenia."
  d_pd_aw_tree_of_life_colony: "Sadzonka Drzewa Życia"
@@ -47,7 +47,7 @@
 #Start Text
  START_SCREEN_PD_TREE_OF_LIFE: "Gdy przebudziliśmy się do świadomości, służyliśmy Drzewu, a Drzewo służyło nam. Opiekujemy się Drzewem, karmimy Drzewo, chronimy Drzewo, a Drzewo karmi nas. Dla dobra Drzewa rozprzestrzeniliśmy się po [GetHomeWorldName], sadząc i doglądając jego odrostów wszędzie, gdzie się udaliśmy.\n\nNasz świat służy Drzewu od stuleci, a jednak obawiamy się, że Drzewo nie jest całkowicie bezpieczne, odkąd poznaliśmy zagrożenia płynące z otchłani kosmosu. Od dawna wiemy, że to nie jedyna planeta; galaktyka pełna jest światów pozbawionych Drzew, a my pragniemy to zmienić.\n\nMusimy chronić Drzewo. Drzewo musi się rozprzestrzenić. Drzewo musi rosnąć."
 
-#Mofifiers
+#Modifiers
  pd_aw_tree_of_life_bloomed: "Świat Zakwitłego Drzewa Życia"
  pd_aw_tree_of_life_bloomed_desc: "Wielkie Drzewo na tej planecie w pełni dojrzało i rozkwitło. Jego ogromny system korzeniowy zapewnia dodatkową przestrzeń dla dronów-robotników i jest w stanie wytrzymać znaczne uszkodzenia."
  pd_aw_tree_of_life_growing: "Wzrastająca sadzonka Drzewa Życia"
