--- a/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
@@ -34,99 +34,85 @@
  building_megalfora_lab_desc: "Możemy się wiele nauczyć z unikalnej struktury drzew megaflory i otaczających je lasów."
  building_megalfora_grid: "Megaflorowa sieć poboru żywicy"
  building_megalfora_grid_desc: "System żywiczny drzew megaflory zawiera ogromne ilości energii, którą można pozyskiwać bez negatywnego wpływu na same drzewa, zwiększając naszą produkcję energii."
- 
- building_petrified_mine: "Skamieniałe kopalnie"
+ building_petrified_mine: "Kopalnie skamieniałych lasów"
  building_petrified_mine_desc: "Obfitość skamieniałego drewna na planecie pozwala na łatwy dostęp do minerałów."
- building_petrified_guild: "Skamieniała stolarnia"
+ building_petrified_guild: "Stolarnia skamieniałych lasów"
  building_petrified_guild_desc: "Rzadkie właściwości skamieniałego drewna pozwalają na tworzenie zachwycających dóbr konsumpcyjnych."
- building_petrified_lab: "Skamieniała sieć badawcza"
+ building_petrified_lab: "Sieć badawcza skamieniałych lasów"
  building_petrified_lab_desc: "Burzliwa przeszłość tej planety stwarza bogate możliwości badawcze."
- 
  building_reef_lab: "Rafowe laboratorium wodne"
  building_reef_lab_desc: "Unikalne struktury raf i bogata bioróżnorodność umożliwiają naszym badaniom wyjątkowe odkrycia."
  building_reef_guild: "Rafowa gildia rzemieślnicza"
  building_reef_guild_desc: "Rafy mogą być wykorzystywane do tworzenia nowych i pięknych dóbr konsumpcyjnych."
  building_reef_mine: "Rafowe konsorcjum wydobywcze"
  building_reef_mine_desc: "Bogate w minerały rafy mogą być eksploatowane, zwiększając wydobycie minerałów na planecie."
- 
  building_archipelago_foundry: "Archipelagowa odlewnia lawy"
  building_archipelago_foundry_desc: "Bogata aktywność wulkaniczna znacząco poprawia wydajność naszych odlewni."
  building_archipelago_farm: "Archipelagowe uprawy wulkaniczne"
  building_archipelago_farm_desc: "Żyzna gleba wulkaniczna może być wykorzystana do poprawy plonów."
  building_archipelago_resort: "Archipelagowa sieć kurortów plażowych"
  building_archipelago_resort_desc: "Wiele wysp jest pięknych i bezpiecznych, czyniąc je idealnymi miejscami na kurorty i spa."
- 
  building_biolumen_lab: "Bioluminescencyjna stacja badawcza"
  building_biolumen_lab_desc: "Bioluminescencyjne dżungle pełne są unikalnych form życia i nieodkrytych jeszcze zastosowań medycznych i przemysłowych."
  building_biolumen_resort: "Bioluminescencyjny kurort planetarny"
  building_biolumen_resort_desc: "Bioluminescencyjne dżungle są piękne. Ten system kurortów oferuje wszystko, czego można zapragnąć w ciepłym blasku roślin świecących nocą."
  building_biolumen_farm: "Bioluminescencyjna sieć upraw"
  building_biolumen_farm_desc: "Obfitość roślinności na tej planecie pozwala rolnikom wykorzystywać bioluminescencyjne uprawy, czyniąc rolnictwo bardziej wydajnym."
- 
  building_geothermal_grid: "Geotermalna sieć energetyczna"
  building_geothermal_grid_desc: "Podłączając naszą sieć do silnej aktywności geotermalnej na tej planecie, możemy zwiększyć wydajność techników."
  building_geothermal_foundry: "Geotermalne filtry zawiesinowe"
  building_geothermal_foundry_desc: "Zawiesina geotermalna jest pełna rzadkich i cennych zasobów. Odpowiednia filtracja pozwala zwiększyć wydajność naszych odlewni."
  building_geothermal_lab: "Geotermalny wydział inżynieryjny"
  building_geothermal_lab_desc: "Silna aktywność geotermalna i ekstremalne różnice temperatur zmuszają inżynierów do stosowania unikalnych rozwiązań wobec typowych problemów inżynieryjnych."
- 
  building_salt_lab: "Solne laboratorium testowe"
  building_salt_lab_desc: "Rzadkie formacje solne na tej planecie mają wiele możliwych zastosowań przemysłowych i technicznych, a ich badania poprawiają jakość prowadzonych tu badań."
  building_salt_mine: "Solne kopalnie kryształów"
  building_salt_mine_desc: "Rzadkie kryształy soli umożliwiają łatwiejsze wydobycie rzadkich i nowych minerałów."
- building_salt_foundry: "Solne odlewnie ulepszone"
+ building_salt_foundry: "Solne odlewnie stopów"
  building_salt_foundry_desc: "Niektóre rzadkie sole mogą poprawić jakość i ilość stopów wytwarzanych w odlewniach."
- 
- building_aquifer_farm: "Akwiferowa sieć uprawna"
+ building_aquifer_farm: "Wodonośna sieć uprawna"
  building_aquifer_farm_desc: "Wykorzystując system akwiferów do produkcji żywności, możemy znacząco zwiększyć wydajność rolniczą tego świata."
- building_aquifer_resort: "Akwiferowe usługi turystyczne"
+ building_aquifer_resort: "Wodonośne usługi turystyczne"
  building_aquifer_resort_desc: "Te kurorty pozwalają turystom cieszyć się naturalnym pięknem akwiferów i chłodnymi, bogatymi wodami."
- building_aquifer_lab: "Akwiferowe laboratorium jaskiniowe"
+ building_aquifer_lab: "Wodonośne laboratorium jaskiniowe"
  building_aquifer_lab_desc: "Laboratorium to bada unikalne formy życia znajdujące się w podziemnym systemie akwiferów."
  mod_building_aquifer_lab_max: "Maks. $building_aquifer_lab$"
-
- building_primal_foundry: "Prymitywna odlewnia magmy"
+ building_primal_foundry: "Pierwotna odlewnia magmy"
  building_primal_foundry_desc: "Łatwo dostępna aktywność wulkaniczna może być wykorzystana do zwiększenia wydajności odlewni."
- building_primal_grid: "Prymitywna sieć energetyczna"
+ building_primal_grid: "Pierwotna sieć energetyczna"
  building_primal_grid_desc: "Wysoki poziom aktywności wulkanicznej może zostać użyty do poprawy produkcji energii."
- building_primal_mine: "Prymitywne kopalnie pirokanałów"
+ building_primal_mine: "Pierwotne kopalnie pirokanałów"
  building_primal_mine_desc: "Wysoka aktywność wulkaniczna stworzyła wiele starych pirokanałów, które dają dostęp do bogatych żył mineralnych."
- 
  building_coral_resort: "Koralowy kurort planetarny"
  building_coral_resort_desc: "Suchy klimat i barwne koralowe lasy tworzą spektakularne miejsca na wakacje."
  building_coral_lab: "Koralowe posterunki badawcze"
  building_coral_lab_desc: "Unikalne lądowe korale kryją wiele sekretów zarówno dla biologów, jak i inżynierów."
  building_coral_guild: "Koralowa gildia rzemieślnicza"
  building_coral_guild_desc: "Lądowe korale na tej planecie są piękne i mają wiele zastosowań konsumpcyjnych."
- 
  building_supercon_farm: "Superkontynentalny system irygacyjny"
  building_supercon_farm_desc: "Ten świat ma mnóstwo otwartej przestrzeni do uprawy i wody, ale nie w tym samym miejscu. Ten zaawansowany system nawadniający poprawia wydajność rolnictwa."
  building_supercon_lab: "Superkontynentalna sieć badawcza"
  building_supercon_lab_desc: "Superkontynent stwarza wyjątkowe możliwości badawcze, od studiów nad florą i fauną po stan tektoniki płyt."
  building_supercon_grid: "Superkontynentalna sieć energetyczna"
  building_supercon_grid_desc: "Dalekie, suche i jałowe tereny wewnątrz superkontynentu są idealnym miejscem do rozwoju dużych sieci solarnych poprawiających planetarną produkcję energii."
- 
  building_pd_sinkhole_mine: "Zapadliskowa gildia górnicza"
  building_pd_sinkhole_mine_desc: "Zapadliska oferują wiele bogatych możliwości wydobywczych."
  building_pd_sinkhole_guild: "Zapadliskowe dobra podziemne"
  building_pd_sinkhole_guild_desc: "Jaskinie i zapadliska umożliwiają dostęp do cennych materiałów."
  building_pd_sinkhole_lab: "Zapadliskowa sieć badawcza"
  building_pd_sinkhole_lab_desc: "Zapadliska są domem unikalnych form życia i stanowią wiele wyzwań inżynieryjnych do wykorzystania."
- 
  building_storm_lab: "Burzowe laboratoria meteorologiczne"
  building_storm_lab_desc: "Ekstremalna pogoda na tej planecie pozwala na praktyczne badania nowych technik inżynieryjnych i wzorców meteorologicznych."
  building_storm_grid: "Burzowa sieć farm wiatrowych"
  building_storm_grid_desc: "Ekstremalne wiatry na tej planecie zwiększają wydajność energetyczną sieci."
  building_storm_mine: "Burzowe kopalnie powierzchniowe"
  building_storm_mine_desc: "Ekstremalna pogoda na tej planecie obniża powierzchnię w wielu miejscach, tworząc łatwo dostępne możliwości górnicze."
- 
  building_iceberg_lab: "Lodowcowa sieć laboratoriów"
  building_iceberg_lab_desc: "Stałe lodowce zapewniają wyjątkowe możliwości badań inżynieryjnych i biologicznych."
  building_iceberg_farm: "Lodowcowa farma wodorostów"
  building_iceberg_farm_desc: "Wodorosty na tym świecie rosną w takiej obfitości, że każda uprawa jest niezwykle wydajna."
  building_iceberg_foundry: "Lodowcowa odlewnia"
  building_iceberg_foundry_desc: "Zimna słona woda i bogactwo soli zwiększają produkcję stopów."
- 
  building_cryo_lab: "Krio-sieć badawcza"
  building_cryo_lab_desc: "Badania flory i fauny tego świata poszerzą możliwości naszych naukowców."
  building_cryo_guild: "Krio-gildia rzemieślnicza"
@@ -134,48 +120,41 @@
  mod_planet_artisans_unity_produces_add: "£unity£ $unity$ z miejsc pracy [GetArtisanIcon] [GetArtisanPlural]"
  building_cryo_grid: "Krio-proteinowa sieć energetyczna"
  building_cryo_grid_desc: "Tutaj przetwarzamy krioflorę na rzadkie białka, aby poprawić produkcję energii."
- 
  building_lichen_farm: "Porostowa farma"
  building_lichen_farm_desc: "Fermy te wykorzystują lokalne porosty do zwiększenia wydajności."
  building_lichen_grid: "Porostowy bioreaktor"
  building_lichen_grid_desc: "Dodając nadmiar porostów do bioreaktorów, możemy poprawić wydajność energetyczną."
  building_lichen_lab: "Porostowe centrum badawcze"
  building_lichen_lab_desc: "Ośrodek ten bada unikalną bioróżnorodność i przemysłowe zastosowania lasów porostowych."
- 
  building_cryo_resort: "Krioflorowy kurort"
  building_cryo_resort_desc: "Ten ogromny kurort powstał wokół bogatych i pięknych lasów krioflory, tworząc możliwości turystyczne dla całej planety."
- 
- building_glacio_foundry: "Glaciowulkaniczna kuźnia magmy"
+ building_glacio_foundry: "Lodowowulkaniczna kuźnia magmy"
  building_glacio_foundry_desc: "Specjalne kuźnie wykorzystują energię wulkaniczną, aby zwiększyć produkcję stopów."
- building_glacio_resort: "Glaciowulkaniczne gorące źródła"
+ building_glacio_resort: "Lodowowulkaniczne gorące źródła"
  building_glacio_resort_desc: "Ta sieć kurortów korzysta z obfitych gorących źródeł na tym świecie."
- building_glacio_mine: "Glaciowulkaniczne kopalnie pirokanałów"
+ building_glacio_mine: "Lodowowulkaniczne kopalnie pirokanałów"
  building_glacio_mine_desc: "Uśpione pirokanały pozwalają górnikom dotrzeć do trudno dostępnych minerałów."
- 
  building_lanthanide_guild: "Lantanidowa gildia rzemieślnicza"
  building_lanthanide_guild_desc: "Ta gildia rzemieślników wykorzystuje rzadkie metale lantanidowe do tworzenia unikalnych dóbr konsumpcyjnych."
  building_lanthanide_lab: "Lantanidowa sieć badawcza"
  building_lanthanide_lab_desc: "Ta sieć laboratoriów i stanowisk testowych pozwala badaczom odkrywać nowe sposoby użycia lantanidów."
  building_lanthanide_mine: "Lantanidowa kopalnia złóż"
  building_lanthanide_mine_desc: "Bogate złoża lantanidów sprawiają, że górnictwo na tym świecie jest wyjątkowo wydajne."
- 
  building_wet_td_farm: "Synchroniczny kompleks rolniczy"
  building_wet_td_farm_desc: "Stałe światło słoneczne sprawia, że uprawa żywności jest niezwykle wydajna."
  building_wet_td_grid: "Synchroniczna sieć energii odnawialnej"
  building_wet_td_grid_desc: "Stałe światło słoneczne i wiatr umożliwiają wydajną sieć energetyczną."
  building_wet_td_bio_lab: "Synchroniczne laboratoria badań biologicznych"
  building_wet_td_bio_lab_desc: "Każda strefa planety ma tak unikalne warunki środowiskowe, że flora i fauna ewoluowały w unikalny i nowatorski sposób."
- 
  building_karst_grid: "Jaskiniowy odwiert geotermalny"
  building_karst_grid_desc: "Głębokie jaskinie pozwalają na łatwy dostęp do bogatych źródeł energii geotermalnej, zwiększając produkcję energii na planecie."
- building_karst_lab: "Jaskiniowa gildia inżynieryjna"
+ building_karst_lab: "Jaskiniowa gildia inżynierów"
  building_karst_lab_desc: "Budowanie miast pod ziemią to nie lada wyzwanie. Ta gildia koordynuje działania z lokalnymi badaczami, zwiększając wydajność badań inżynieryjnych."
  building_karst_mine: "Jaskiniowe konsorcja górnicze"
  building_karst_mine_desc: "Głębokie jaskinie umożliwiają łatwy dostęp do bogatych złóż rud, zwiększając produkcję minerałów na planecie."
- 
  building_superhab_lab: "Superziemskie laboratoria ewolucyjne"
  building_superhab_lab_desc: "Choć superziemskie światy nie są idealne dla wszystkich stworzeń, są idealnym środowiskiem do ewolucji życia biologicznego. Częste odkrycia poprawiają badania socjologiczne na całej planecie."
- building_superhab_farm: "Superziemskia sieć farm"
+ building_superhab_farm: "Superziemskia sieć upraw"
  building_superhab_farm_desc: "Idealne warunki do upraw na tej planecie pozwalają na wyższe niż zwykle plony rolnicze."
  building_superhab_foundry: "Superziemska odlewnia wysokograwitacyjna"
  building_superhab_foundry_desc: "Wytwarzanie stopów w warunkach wysokiej grawitacji sprawia, że gęste, wysokiej jakości stopy są łatwiejsze do produkcji."
