--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -267,7 +267,7 @@
  mod_pc_pd_mediterranean_habitability: "Możliwość zamieszkania świata suchego"
  trait_pc_pd_mediterranean_preference: "Preferowany teren: suchy"
  trait_pc_pd_mediterranean_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_badlands: "Świat surowy"
+ pc_pd_badlands: "Świat pustkowi"
  pc_pd_badlands_desc: "Sucha, skalista planeta z atmosferą azotowo-tlenową. Suchy teren składa się głównie z osadowych skał i gliniastych gleb erodowanych przez wiatr i wodę. Roślinność występuje głównie w formie krzewów i wytrzymałych traw."
  pc_pd_badlands_adj: "skalisty"
  mod_pc_pd_badlands_habitability: "Możliwość zamieszkania świata suchego"
@@ -397,7 +397,7 @@
  mod_pc_pd_aeolian_habitability: "Możliwość zamieszkania świata arktycznego"
  trait_pc_pd_aeolian_preference: "Preferowany teren: arktyczny"
  trait_pc_pd_aeolian_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_ice_spike: "Świat lodowych iglic"
+ pc_pd_ice_spike: "Świat iglicowy"
  pc_pd_ice_spike_desc: "Lodowata, skalista planeta z atmosferą azotowo-tlenową. Hydrosfera jest w większości zamrożona. Intensywna aktywność tektoniczna pod powierzchnią tworzy wysokie iglice lodowe dominujące w krajobrazie."
  pc_pd_ice_spike_adj: "iglicowy"
  mod_pc_pd_ice_spike_habitability: "Możliwość zamieszkania świata arktycznego"
@@ -453,7 +453,7 @@
  mod_pc_pd_highland_habitability: "Możliwość zamieszkania świata wysokogórskiego"
  trait_pc_pd_highland_preference: "Preferowany teren: górski"
  trait_pc_pd_highland_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_dune_forest: "Świat wydmowoleśne"
+ pc_pd_dune_forest: "Świat wydmowoleśny"
  pc_pd_dune_forest_desc: "Zimna, górzysta planeta z atmosferą azotowo-tlenową. Wysoka mgła, niskie opady. Niziny pokryte wydmami, ale hydrosfera wspiera śnieżne, zalesione góry."
  pc_pd_dune_forest_adj: "górzysty"
  mod_pc_pd_dune_forest_habitability: "Możliwość zamieszkania świata wysokogórskiego"
@@ -520,9 +520,9 @@
  mod_pc_pd_basalt_habitability: "Możliwość zamieszkania świata tundrowego"
  trait_pc_pd_basalt_preference: "Preferowany teren: tundra"
  trait_pc_pd_basalt_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_tuya: "Świat meteorytowy"
+ pc_pd_tuya: "Świat chondrytowy"
  pc_pd_tuya_desc: "Zimna, skalista planeta z atmosferą azotowo-tlenową. Mimo długich, surowych zim i ograniczonych zmian sezonowych, planeta posiada stabilną biosferę dzięki żyznym, wulkanicznym glebom. Rozległe pokrywy lodowcowe i silna aktywność wulkaniczna tworzą liczne podlodowe wulkany."
- pc_pd_tuya_adj: "meteorytowy"
+ pc_pd_tuya_adj: "chondrytowy"
  mod_pc_pd_tuya_habitability: "Możliwość zamieszkania świata tundrowego"
  trait_pc_pd_tuya_preference: "Preferowany teren: tundra"
  trait_pc_pd_tuya_preference_desc: "$trait_pc_arctic_preference_desc$"
@@ -532,13 +532,13 @@
  mod_pc_pd_cryovolcano_habitability: "Możliwość zamieszkania świata tundrowego"
  trait_pc_pd_cryovolcano_preference: "Preferowany teren: tundra"
  trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_treeline: "Świat granicy lasu"
+ pc_pd_treeline: "Świat drzewograniczny"
  pc_pd_treeline_desc: "Lodowata, skalista planeta z atmosferą azotowo-tlenową. Większość powierzchni to skute lodem pustkowia, z wyjątkiem równikowego pasa, gdzie rozwija się bujny ekosystem leśny."
  pc_pd_treeline_adj: "lodowaty"
  mod_pc_pd_treeline_habitability: "Możliwość zamieszkania świata tundrowego"
  trait_pc_pd_treeline_preference: "Preferowany teren: tundra"
  trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_cryoflora: "Świat krioroślinny"
+ pc_pd_cryoflora: "Świat kriofloralny"
  pc_pd_cryoflora_desc: "Zimna, skalista planeta z atmosferą azotowo-tlenową. Choć temperatury często spadają poniżej zera, większość hydrosfery jest uwięziona w śniegu i lodzie. Mimo to flora i fauna przystosowały się dzięki białkom przeciwzamrożeniowym, tworząc bujny, żywy ekosystem."
  pc_pd_cryoflora_adj: "lśniący"
  mod_pc_pd_cryoflora_habitability: "Możliwość zamieszkania świata tundrowego"
