--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -716,7 +716,7 @@
  #Supercontinent
  pc_pd_supercontinent_tooltip: "§YŚwiaty superkontynentalne§! to ['concept_pd_rares']\n- £district£ §Y$district_farming_plural$§!: §G+4§!\n- Możliwość zamieszkania: §R-10%§!\n- Utrzymanie budynków i dzielnic: §R+10%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_food$\n$t$- $pd_tooltip_energy$\n$t$- £physics£ £engineering£ $pd_researcher_ending$"
  #Sinkhole
- pc_pd_sinkhole_tooltip: "§YŚwiaty lejów zapadliskowych§! to ['concept_pd_rares']\n- £district£ §Y$district_mining_plural$§!: §G+4§!\n- Możliwość zamieszkania: §G+10%§!\n- Koszt budynków i dzielnic: §R+15%§!\n- Utrzymanie budynków i dzielnic: §R+15%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_minerals$\n$t$- $pd_tooltip_energy$\n$t$- £physics£ £engineering£ $pd_researcher_ending$"
+ pc_pd_sinkhole_tooltip: "§YŚwiaty zapadliskowe§! to ['concept_pd_rares']\n- £district£ §Y$district_mining_plural$§!: §G+4§!\n- Możliwość zamieszkania: §G+10%§!\n- Koszt budynków i dzielnic: §R+15%§!\n- Utrzymanie budynków i dzielnic: §R+15%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_minerals$\n$t$- $pd_tooltip_energy$\n$t$- £physics£ £engineering£ $pd_researcher_ending$"
  #Storm
  pc_pd_storm_tooltip: "§YŚwiaty burzowe§! to ['concept_pd_rares']\n- £district£ §Y$district_generator_plural$§!: §G+6§!\n- £district£ §Y$district_farming_plural$§!: §R-2§!\n- Koszt budynków i dzielnic: §R+10%§!\n- Możliwość zamieszkania: §R-10%§!\n- $rare_building_warning$\n$t$- $pd_tooltip_minerals$\n$t$- $pd_tooltip_energy$\n$t$- £society£ £engineering£ $pd_researcher_ending$"
  #Iceberg
