--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -280,7 +280,7 @@
  pd_chthonian: "Świat chtoniczny"
  pd_chthonian_desc: "Ta planeta była niegdyś gazowym olbrzymem, lecz wiatry gwiezdne zdarły z niej atmosferę wodoru i helu, pozostawiając nagie metaliczne jądro."
  pd_iron: "Świat żelazny"
- pd_iron_desc: "Planeta składa się głównie z bogatego w żelazo jądra z niewielkim płaszczem lub jego brakiem."
+ pd_iron_desc: "Planeta składa się głównie z bogatego w żelazo jądra z niewielkim płaszczem lub go pozbawionym."
  pd_volcanic: "Świat wulkaniczny"
  pd_volcanic_desc: "Na tej planecie dochodzi do ciągłych erupcji wulkanicznych z powodu wysokiej aktywności geologicznej, a pióropusze siarki sięgają nawet 500 km ponad powierzchnię."
  pd_hydrocarbon: "Świat węglowodorowy"
