--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -657,7 +657,7 @@
  pc_carbon: "Świat węglowy"
  pc_carbon_desc: "Jałowa i skalista planeta z cienką lub nieistniejącą atmosferą. Powierzchnia usiana jest kraterami po uderzeniach meteorytów i całkowicie pozbawiona życia. W przeciwieństwie do większości planet opartych na związkach krzemowo-tlenowych, ma znacznie wyższy stosunek węgla do tlenu."
  pc_iron: "Świat żelazny"
- pc_iron_desc: "Jałowa i skalista planeta z cienką lub nieistniejącą atmosferą. Powierzchnia usiana jest kraterami po uderzeniach meteorytów i całkowicie pozbawiona życia. Planeta składa się głównie z żelaznego jądra z niewielkim płaszczem lub jego pozbawionym."
+ pc_iron_desc: "Jałowa i skalista planeta z cienką lub nieistniejącą atmosferą. Powierzchnia usiana jest kraterami po uderzeniach meteorytów i całkowicie pozbawiona życia. Planeta składa się głównie z żelaznego jądra z niewielkim płaszczem lub go pozbawionym."
  pc_subglacial: "Świat podlodowy"
  pc_subglacial_desc: "Skalista planeta pokryta grubą warstwą wiecznego lodu. Niskie temperatury i cienka atmosfera uniemożliwiają istnienie życia na powierzchni. Pod lodową skorupą, dzięki ogrzewaniu pływowemu lub aktywności geotermalnej, może istnieć podpowierzchniowy ocean."
  pc_hydrocarbon: "Świat węglowodorowy"
