--- a/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_capital_l_polish.yml
+++ b/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_capital_l_polish.yml
@@ -22,10 +22,10 @@
  d_pd_headquarters_building_desc: "Monumentalny symbol dominacji, ta Kwatera góruje nad planetą. Jest centrum nerwowym naszych operacji, gdzie kształtowana jest przyszłość megakorporacji."
 
 #Hive Confluence Spire
- decision_pd_hive_confluence_spire: "Zbuduj Iglicę Zbieżności"
- decision_pd_hive_confluence_spire_desc: "Aby zamanifestować wyższość i zasięg naszego kolektywu, wyrośniemy potężną Iglicę Zbieżności. Ta imponująca konstrukcja znacząco wzmocni nasze działania wśród gwiazd."
+ decision_pd_hive_confluence_spire: "Zbuduj Iglicę Konwergencji"
+ decision_pd_hive_confluence_spire_desc: "Aby zamanifestować wyższość i zasięg naszego kolektywu, wyrośniemy potężną Iglicę Konwergencji. Ta imponująca konstrukcja znacząco wzmocni nasze działania wśród gwiazd."
  decision_pd_hive_confluence_spire_effects: "Dodaje §Y$d_pd_confluence_spire_building$§! do tej stolicy, zamieniając potencjalne dzielnice w celu zwiększenia naszych możliwości administracyjnych."
- d_pd_confluence_spire_building: "Iglica Zbieżności"
+ d_pd_confluence_spire_building: "Iglica Konwergencji"
  d_pd_confluence_spire_building_desc: "Ta Iglica góruje nad powierzchnią planety, będąc strzelistym symbolem kontroli. To centrum woli kolektywu, gdzie misterna sieć naszego losu wśród gwiazd zostaje utkana."
 
 #Machine Centralized Processing
