--- a/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_l_polish.yml
+++ b/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_l_polish.yml
@@ -31,7 +31,7 @@
  job_pd_naval_admin: "Logistyk"
  job_pd_naval_admin_plural: "Logistycy"
  job_pd_naval_admin_desc: "Wysoko wyszkoleni w zarządzaniu zaopatrzeniem, specjaliści ci zapewniają sprawne działanie floty, utrzymując i monitorując kluczowe linie dostaw."
- mod_job_pd_naval_admin_add: "Miejsce pracy: $job_pd_naval_admin$"
+ mod_job_pd_naval_admin_add: "Miejsca pracy: $job_pd_naval_admin$"
  mod_job_pd_naval_admin_per_pop: "§G+1§! miejsc pracy: $job_pd_naval_admin$ na $VALUE$ populacji"
  mod_job_pd_naval_admin_per_pop_short: "\n§G+1§! £mod_job_pd_naval_admin_add£ na $VALUE$ £pop£"
  job_pd_naval_admin_effect_desc: "£job_pd_naval_admin£ $job_pd_naval_admin_plural$ zwiększają efektywność floty, przetwarzając £consumer_goods£ §Y$consumer_goods$§! w: £society£ §YBadania socjologiczne§! oraz £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
@@ -39,14 +39,14 @@
  job_pd_naval_admin_gestalt: "Dron logistyczny"
  job_pd_naval_admin_gestalt_plural: "Drony logistyczne"
  job_pd_naval_admin_gestalt_desc: "Wyspecjalizowane w zarządzaniu zaopatrzeniem, drony te zapewniają sprawne działanie floty, utrzymując i monitorując kluczowe linie dostaw."
- mod_job_pd_naval_admin_gestalt_add: "Miejsce pracy: $job_pd_naval_admin_gestalt$"
+ mod_job_pd_naval_admin_gestalt_add: "Miejsca pracy: $job_pd_naval_admin_gestalt$"
  mod_job_pd_naval_admin_gestalt_per_pop: "§G+1§! miejsc pracy: $job_pd_naval_admin_gestalt$ na $VALUE$ populacji"
  mod_job_pd_naval_admin_gestalt_per_pop_short: "\n§G+1§! £mod_job_pd_naval_admin_gestalt_add£ na $VALUE$ £pop£"
  job_pd_naval_admin_gestalt_effect_desc: "£job_pd_naval_admin_gestalt£ $job_pd_naval_admin_gestalt_plural$ zwiększają efektywność floty, przetwarzając £minerals£ §Y$minerals$§! w: £society£ §YBadania socjologiczne§! oraz £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
  job_pd_capital_bio_politician: "Biodelegata"
  job_pd_capital_bio_politician_plural: "Biodelegaci"
  job_pd_capital_bio_politician_desc: "Niektóre biotrofea wykazują większe zadowolenie, gdy postrzegają siebie jako ważniejsze od innych. Iluzja dominującej pozycji pozytywnie wpływa na ich morale i ogólne szczęście."
- mod_job_pd_capital_bio_politician_add: "Miejsce pracy: $job_pd_capital_bio_politician$"
+ mod_job_pd_capital_bio_politician_add: "Miejsca pracy: $job_pd_capital_bio_politician$"
  mod_job_pd_capital_bio_politician_per_pop: "§G+1§! miejsc pracy: $job_pd_capital_bio_politician$ na $VALUE$ populacji"
  mod_job_pd_capital_bio_politician_per_pop_short: "\n§G+1§! £mod_job_pd_capital_bio_politician_add£ na $VALUE$ £pop£"
  job_pd_capital_bio_effect_desc: "$job_pd_capital_bio_politician$ $job_pd_capital_bio_politician_plural$ przetwarzają £consumer_goods£ §Y$consumer_goods$§! w: £unity£ §Y$unity$§! oraz zwiększają §Y$mod_planet_jobs_complex_and_simple_drone_produces_mult$§!."
@@ -54,7 +54,7 @@
  job_pd_robo_ranger: "Dron bioróżnorodności"
  job_pd_robo_ranger_plural: "Drony bioróżnorodności"
  job_pd_robo_ranger_desc: "Drony bioróżnorodności są wyspecjalizowane w dbaniu, by nasze planety pozostawały czyste i naturalne dla biotrofeów."
- mod_job_pd_robo_ranger_add: "Miejsce pracy: $job_pd_robo_ranger$"
+ mod_job_pd_robo_ranger_add: "Miejsca pracy: $job_pd_robo_ranger$"
  mod_job_pd_robo_ranger_per_pop: "§G+1§! miejsc pracy: $job_pd_robo_ranger$ na $VALUE$ populacji"
  mod_job_pd_robo_ranger_per_pop_short: "\n§G+1§! £mod_job_pd_robo_ranger_add£ na $VALUE$ £pop£"
  job_pd_robo_ranger_effect_desc: "$job_pd_robo_ranger$ $job_pd_robo_ranger_plural$ zapewniają £amenities£ §Yudogodnienia§! oraz £society_research£ §Y$society_research$§!."
@@ -198,7 +198,7 @@
  job_pd_park_ranger: "Opiekun rezerwatu"
  job_pd_park_ranger_plural: "Opiekunowie rezerwatu"
  job_pd_park_ranger_desc: "Wyspecjalizowani botanicy i specjaliści od krajobrazu, którzy monitorują bioróżnorodność, kierują sukcesją ekologiczną i dbają o zachowanie delikatnej równowagi rezerwatu w obliczu presji otaczającej urbanizacji."
- mod_job_pd_park_ranger_add: "Miejsce pracy: $job_pd_park_ranger$"
+ mod_job_pd_park_ranger_add: "Miejsca pracy: $job_pd_park_ranger$"
  mod_job_pd_park_ranger_per_pop: "§G+1§! miejsc pracy: $job_pd_park_ranger$ na $VALUE$ populacji"
  mod_job_pd_park_ranger_per_pop_short: "\n§G+1§! £mod_job_pd_park_ranger_add£ na $VALUE$ £pop£"
  job_pd_park_ranger_effect_desc: "£job_pd_park_ranger£ $job_pd_park_ranger_plural$ przetwarzają £consumer_goods£ §Y$consumer_goods$§! na £society£ §YBadania socjologiczne§!, £unity£ §Y$unity$§! oraz £amenities£ §YUdogodnienia§!."
