--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -116,7 +116,7 @@
  job_pd_tol_naval_admin_gestalt: "Dron logistyczny"
  job_pd_tol_naval_admin_gestalt_plural: "Drony logistyczne"
  job_pd_tol_naval_admin_gestalt_desc: "Wysoce wyspecjalizowane w zarządzaniu zaopatrzeniem, te drony zapewniają sprawne operacje floty, utrzymując i kontrolując kluczowe linie dostaw."
- mod_job_pd_tol_naval_admin_gestalt_add: "Miejsce pracy: $job_pd_tol_naval_admin_gestalt$"
+ mod_job_pd_tol_naval_admin_gestalt_add: "Miejsca pracy: $job_pd_tol_naval_admin_gestalt$"
  mod_job_pd_tol_naval_admin_gestalt_per_pop: "§G+1§! miejsc pracy $job_pd_tol_naval_admin_gestalt$ na $VALUE$ Popów"
  mod_job_pd_tol_naval_admin_gestalt_per_pop_short: "\n§G+1§! £mod_job_pd_tol_naval_admin_gestalt_add£ na $VALUE$ £pop£"
  job_pd_tol_naval_admin_gestalt_effect_desc: "£job_pd_tol_naval_admin_gestalt£ $job_pd_tol_naval_admin_gestalt_plural$ zwiększają efektywność floty, zamieniając £minerals£ §Y$minerals$§! w £society£ §YBadania socjologiczne§! i £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
