--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -98,7 +98,7 @@
  pc_pd_flora_hive_desc: "Ten rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem, aby odpowiadał zarówno jemu, jak i dronom. Świat został rozwinięty w bastion zaawansowanych procesów myślowych i jest silnie broniony przez zamieszkujący go rój."
  pc_pd_flora_hive_adj: "zalesiony"
  mod_pc_pd_flora_hive_habitability: "Możliwość zamieszkania świata korony megaflory"
- trait_pc_pd_flora_hive_preference: "Preferencja - świata korony megaflory"
+ trait_pc_pd_flora_hive_preference: "Preferencja - świat korony megaflory"
  trait_pc_pd_flora_hive_preference_desc: "$trait_pc_arctic_preference_desc$"
  pd_aw_flora_hive_military: "Świat Korony Megaflory"
  pd_aw_flora_hive_military_desc: "Ten świat jest kluczowy dla rdzenia funkcjonowania umysłu zbiorowego megaflory i został ufortyfikowany przeciwko zewnętrznym zagrożeniom i wpływom. Potężna tarcza otacza planetę, a drony-wojownicy są gotowe zapewnić jej ochronę."
