--- a/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
@@ -154,7 +154,7 @@
  building_karst_mine_desc: "Głębokie jaskinie umożliwiają łatwy dostęp do bogatych złóż rud, zwiększając produkcję minerałów na planecie."
  building_superhab_lab: "Superziemskie laboratoria ewolucyjne"
  building_superhab_lab_desc: "Choć superziemskie światy nie są idealne dla wszystkich stworzeń, są idealnym środowiskiem do ewolucji życia biologicznego. Częste odkrycia poprawiają badania socjologiczne na całej planecie."
- building_superhab_farm: "Superziemskia sieć upraw"
+ building_superhab_farm: "Superziemska sieć upraw"
  building_superhab_farm_desc: "Idealne warunki do upraw na tej planecie pozwalają na wyższe niż zwykle plony rolnicze."
  building_superhab_foundry: "Superziemska odlewnia wysokograwitacyjna"
  building_superhab_foundry_desc: "Wytwarzanie stopów w warunkach wysokiej grawitacji sprawia, że gęste, wysokiej jakości stopy są łatwiejsze do produkcji."
@@ -208,10 +208,10 @@
  pd_normal_terraforming_desc: "Koszty terraformowania pozostaną standardowe, użyjemy kształtowania świata tylko tam, gdzie uznamy to za konieczne."
  
  #Nemma World
- pd_nemma: "Świat Nemma"
+ pd_nemma: "Świat Olbrzymów"
  pd_nemma_desc: "Wyspy tej planety to w rzeczywistości olbrzymie, mineralnie opancerzone płazy-reptyle. Nazywane Nemmami, unoszą się na powierzchni i pozostają spokojne, jeśli nie są niepokojone."
  #Alpha Centauri
- pd_alpha_centauri: "Świat Chiron"
+ pd_alpha_centauri: "Świat Chirona"
  pd_alpha_centauri_desc: "Planeta pokryta jest ksenogrzybnią i cierpi na ekstremalne warunki pogodowe oraz niestabilność sejsmiczną. Pomimo tych zagrożeń, jej bogate zasoby i odporna biosfera oferują cenne możliwości badań i eksploatacji."
 
  #Zones
