Fix coding pd_uniques_l_polish
Converted to UTF-8 BOM

--- a/planetary_diversity_uniques/localisation/polish/pd_uniques_l_polish.yml
+++ b/planetary_diversity_uniques/localisation/polish/pd_uniques_l_polish.yml
@@ -1,4 +1,4 @@
-l_polish:
+﻿l_polish:
 ###Floating World
  sr_eludium:0 "Ruda eludium"
  sr_eludium_desc:0 "Ta egzotyczna substancja posiada wiele właściwości przeczących prawom fizyki. Tylko na tej planecie potrafi zmieniać masę materii poprzez oddziaływanie na grawitację."
